# projektzapisy

./: .env  .flake8  .gitignore  .pep8speaks.yml  .travis.yml  BUILD.bazel  CHANGELOG.md  Dockerfile  Dockerfile.base  Iyear  README  README-DOCKER.md  README.md  Vagrantfile  WORKSPACE  azure-pipelines-merge-fork.yml  azure-pipelines-sync-fork.yml  azure-pipelines.yml  circle.yml  docker-compose.yml  docker_before_postgres.sh  fabfile.py  feeds.py  generate_options.py  glosowanie.py  importstudents.py  migracja.py  mobile_urls.py  newrelic.ini  pierwszaki.py  pierwszaki.txt  pipeline.py  plik.txt  prop.json  przed.json  questions.txt  requiments.txt  run.py  search_sites.py  settings.py  (+3 more)
.circleci/: config.yml
ansible/: playbook.yml  postgres.yml  rqworker1.service  rqworker2.service  runserver.service  services.yml  vagrant-zapisy-node_modules.mount  yarn.service  yarn_devw.service
database/: .gitignore  db.sqlite3
db_backups/: anonymize.sql  backup.py  perform_backup.sh  perform_dump.sh  requirements.txt  slack_notifications.py  slacktest.py
dbexport/: export_to_old_system.py
dbimport/: dbimport.py  readme  scheduleimport.py
dev_scripts/: clean.py  init.py  run
djangologging/: middleware.py
env/: .env  .env_circleci  .env_travis  apache_setup.sh  bash_setup.sh  bootstrap.sh  env2.6_setup.sh  env2.7_setup.sh  env3_setup.sh  js_setup.sh  nodejs_setup.sh  postgre_setup.sh  py3.sh  py3_build.sh  redis.sh  requirements-2.6-1.4.2.txt  settings_local.py  settings_local_test.py  setup_npm.sh  tools_install.sh  webpack_setup.sh
frontend/: .babelrc  tsconfig.json
(+2846 files in other folders)
